<resources>
    <string name="app_name">Motiva Implants® Clinical Trial</string>
    <string name="app_id">1679016325505611</string>
    <string name="title_activity_login" translatable="false">Sign in</string>
    <string name="prompt_email" translatable="false">Email</string>
    <string name="prompt_password" translatable="false">Password</string>
    <string name="permission_rationale" translatable="false">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_create_account" translatable="false">Create Account</string>
    <string name="title_activity_main2" translatable="false">Main2Activity</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="title_activity_my_account" translatable="false">MyAccount</string>
    <string name="section_format" translatable="false">Hello World from section: %1$d</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="About">About</string>
    <string name="Accept">Accept</string>
    <string name="Add">Add</string>
    <string name="April">April</string>
    <string name="Assistant">Assistant</string>
    <string name="August">August</string>
    <string name="Base">Base</string>
    <string name="Blog">Blog</string>
    <string name="Breast">Breast</string>
    <string name="Cancel">Cancel</string>
    <string name="Clear">Clear</string>
    <string name="Clinic">Clinic</string>
    <string name="Contact">Contact</string>
    <string name="Country">Country</string>
    <string name="December">December</string>
    <string name="Dissmiss">Dissmiss</string>
    <string name="Distribuitor">Distribuitor</string>
    <string name="Doctor">Doctor</string>
    <string name="Email">Email</string>
    <string name="February">February</string>
    <string name="Gluteal">Gluteal</string>
    <string name="Height">Height</string>
    <string name="Home">Home</string>
    <string name="January">January</string>
    <string name="July">July</string>
    <string name="June">June</string>
    <string name="Language">Language</string>
    <string name="Left">Left</string>
    <string name="Loading">Loading</string>
    <string name="Login">Login</string>
    <string name="Logout">Logout</string>
    <string name="March">March</string>
    <string name="May">May</string>
    <string name="Name">Name</string>
    <string name="No">No</string>
    <string name="November">November</string>
    <string name="October">October</string>
    <string name="Password">Password</string>
    <string name="Patient">Patient</string>
    <string name="Processing">Processing</string>
    <string name="Products">Products</string>
    <string name="Projection">Projection</string>
    <string name="Reference">Reference</string>
    <string name="Register">Register</string>
    <string name="Registration">Registration</string>
    <string name="Right">Right</string>
    <string name="September">September</string>
    <string name="Texture">Texture</string>
    <string name="Type">Type</string>
    <string name="Volume">Volume</string>
    <string name="Yes">Yes</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="action_sign_in" translatable="false">Sign in or register</string>
    <string name="action_sign_in_short" translatable="false">Sign in</string>
    <string name="active_warranty">Active warranty</string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="assistants_name">Assistants name</string>
    <string name="breast_implant">Breast implant</string>
    <string name="buy_an_extended_warranty">Buy an extended warranty</string>
    <string name="change_password">Change password</string>
    <string name="choose_an_existing_patient">Choose an existing patient</string>
    <string name="choose_with_confidence">Choose with confidence</string>
    <string name="close_account">Close account</string>
    <string name="complete_purchase">Complete purchase</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="credit_card_number">Credit card number</string>
    <string name="current_password">Current password</string>
    <string name="doctors_name">Doctors name</string>
    <string name="download_warranty_description">Download warranty description</string>
    <string name="edit_profile_info">Edit profile info</string>
    <string name="edit_profile_picture">Edit profile picture</string>
    <string name="electronic_serial_number">Electronic serial number</string>
    <string name="email_address">Email address</string>
    <string name="error_incorrect_password" translatable="false">Error incorrect password</string>
    <string name="error_invalid_email" translatable="false">Error invalid email</string>
    <string name="error_invalid_password" translatable="false">Error invalid password</string>
    <string name="expiration_date">Expiration date</string>
    <string name="extend_your_warranty">Extend your warranty</string>
    <string name="extended_warranty">Extended warranty</string>
    <string name="find_your_assistants">Find your assistants</string>
    <string name="find_your_doctors">Find your doctors</string>
    <string name="find_your_patients">Find your patients</string>
    <string name="fivey_motiva_program">Fivey motiva program</string>
    <string name="health_coach">Health coach</string>
    <string name="forgot_password_get_help">Forgot password? get help</string>
    <string name="how_many_implants_do_you_have">How many implants do you have?</string>
    <string name="i_have_read_and_agree_with_the_terms_and_conditions_and_privacy_policy_for_this_website_and_registra">I have read and agree with the terms and conditions and privacy policy for this application and registration</string>
    <string name="implant_registration">Implant registration</string>
    <string name="implant_type">Implant type</string>
    <string name="last_name">Last name</string>
    <string name="left_breast_warranty_information">Left breast warranty information</string>
    <string name="left_electronic_serial_number">Left electronic serial number</string>
    <string name="left_implant">Left implant</string>
    <string name="left_implant_information">Left implant information</string>
    <string name="left_serial_number">Left serial number</string>
    <string name="login_here">Login here</string>
    <string name="medical_information">Medical information</string>
    <string name="more_info">More info</string>
    <string name="motiva_implants">Motiva implants</string>
    <string name="motiva_warranty_enroll_program">Motiva warranty_enroll_program</string>
    <string name="motivaimagine_center_locator">Motivaimagine center locator</string>
    <string name="my_account">My account</string>
    <string name="my_assistants">My assistants</string>
    <string name="my_doctors">My doctors</string>
    <string name="my_implant_information">My implant information</string>
    <string name="my_patients">My patients</string>
    <string name="my_scans">My scans</string>
    <string name="my_simulations">My simulations</string>
    <string name="my_warranty_information">My warranty information</string>
    <string name="name_on_card">Name on card</string>
    <string name="network_error">Network error</string>
    <string name="new_password">New password</string>
    <string name="of_financial_assistance">Of financial assistance</string>
    <string name="or_create_a_new_account">Or create a new account</string>
    <string name="patients_name">Patients name</string>
    <string name="payment_confirmation">Payment confirmation</string>
    <string name="payment_details">Payment details</string>
    <string name="please_try_again">Please try again</string>
    <string name="please_wait">Please wait</string>
    <string name="please_wait_15_min_before_requesting_a_new_link">Please wait 15 min before requesting a new link</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="product_replacement">Product replacement</string>
    <string name="purchase_an_extended_warranty">Purchase an extended warranty</string>
    <string name="recover_your_password">Recover your password</string>
    <string name="register_a_new_patient">Register a new patient</string>
    <string name="register_staff_account">Register staff account</string>
    <string name="register_your_implants">Register your implants</string>
    <string name="register_your_staff">Register your staff</string>
    <string name="registration_type">Registration Type</string>
    <string name="right_breast_warranty_information">Right breast warranty information</string>
    <string name="right_electronic_serial_number">Right electronic serial number</string>
    <string name="right_implant">Right implant</string>
    <string name="right_implant_information">Right implant information</string>
    <string name="right_serial_number">Right serial number</string>
    <string name="save_profile_info">Save profile info</string>
    <string name="search_and_click_on_your_surgeonss_name_from_this_list_if_your_doctor_is_not_listed_you_can_add_it_b">Search and click on your surgeonss name from this list if your doctor is not listed you can add it by the name and then clicking on it after</string>
    <string name="select_all_the_doctors_that_this_person_is_going_to_work_for">Select all the doctors that this person is going to work for</string>
    <string name="serial_number">Serial number</string>
    <string name="set_new_password">Set new password</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_up_with_facebook">Sign up with Facebook</string>
    <string name="sign_up_with_google">Sign up with Google</string>
    <string name="sign_up_with_your_email_address">Sign up with your email address</string>
    <string name="sort_by">Sort by</string>
    <string name="surgeons_name">Surgeon\'s name</string>
    <string name="surgery_date">Surgery date</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="thank_you">Thank you</string>
    <string name="the_left_implant_does_not_exist">The left implant does not exist</string>
    <string name="the_left_implant_has_been_already_registered">The left implant has been already registered</string>
    <string name="the_left_validation_code_is_wrong">The left validation code is wrong</string>
    <string name="the_right_implant_does_not_exist">The right implant does not exist</string>
    <string name="the_right_implant_has_been_already_registered">The right implant has been already registered</string>
    <string name="the_right_validation_code_is_wrong">The right validation code is wrong</string>
    <string name="theres_an_error_with_the_payment">Theres an error with the payment</string>
    <string name="this_email_address_is_already_registered">This email address is already registered</string>
    <string name="this_email_address_is_not_registered">This email address is not registered</string>
    <string name="this_link_has_expired_please_request_a_new_one">This link has expired please request a new one</string>
    <string name="this_link_is_not_valid_anymore_request_a_new_one">This link is not valid anymore request a new one</string>
    <string name="transaction_declined">Transaction declined</string>
    <string name="twoy_motiva_program">2Y Motiva Program</string>
    <string name="sig_in">Sign in</string>
</resources>