<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true"
    tools:context="com.motivaimagine.motivaimagine_trial.LoginActivity">




        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="36dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp">


            <Button
                android:id="@+id/btn_google"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/gmail_button_bg"
                android:drawableLeft="@drawable/ic_googlep"
                android:padding="3dp"
                android:text="@string/sign_in_with_google"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textColor="@color/colorPrimaryText"
                android:textSize="18sp" />


            <Button
                android:id="@+id/btn_fb_login"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:background="@drawable/fb_button_bg"
                android:drawableLeft="@drawable/fb_logo"
                android:padding="5dp"
                android:text="@string/sign_in_with_facebook"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textColor="@color/colorPrimaryText"
                android:textSize="18sp" />

            <RelativeLayout
                android:id="@+id/or_layout"
                android:layout_width="match_parent"
                android:layout_height="20dp"

                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="16dp">



                <!--      <View
                          android:layout_width="wrap_content"
                          android:layout_height="2dp"
                          android:layout_centerVertical="true"
                          android:layout_toRightOf="@+id/orText"
                          android:background="@android:color/black" />-->

                <TextView
                    android:id="@+id/orText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:text="Or"
                    android:textColor="@android:color/black" />

                <!--            <View
                                android:layout_width="wrap_content"
                                android:layout_height="2dp"
                                android:layout_centerVertical="true"
                                android:layout_toLeftOf="@+id/orText"
                                android:background="@android:color/black" />-->

            </RelativeLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Email"
                    android:imeOptions="actionNext"
                    android:inputType="textWebEmailAddress" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">

                <EditText
                    android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />


            </android.support.design.widget.TextInputLayout>

            <TextView android:id="@+id/link_resetpass"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/forgot_password_get_help"
                android:gravity="center"
                android:textSize="16dip"/>

            <Button

                android:id="@+id/btn_login"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:layout_marginTop="16dp"
                android:padding="5dp"
                android:text="@string/sig_in"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />




            <TextView android:id="@+id/link_signup"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:text="No account yet? Create one"
                android:gravity="center"
                android:textSize="16dip"/>
        </LinearLayout>





</ScrollView>
